static/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Alef:wght@400;700&family=Cabin:ital,wght@0,400..700;1,400..700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

:root {
    --bg-color: #1f1d5e;
    --secondary-color: #91a5fe;
    --accent-color: #597ffc;
    --text-color: #e2e5f6;
    --highlight-color: #ff8695;
}

body {
    background-color: var(--bg-color);
    padding-top: 110px;
    color: var(--text-color);
    font-size: large;
}

h1, h2, h3 {
    color: var(--secondary-color);
    font-family: 'Alef', sans-serif;
    letter-spacing: 1px;
}

p {
    color: var(--text-color);
}

/* Navbar */

.navbar {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    z-index: 1000;
    background-color: var(--bg-color);
    width: 100%;
}

.navbar-dark {
    background-color: var(--bg-color);
}

.navbar-dark .navbar-nav .nav-link {
    color: var(--secondary-color);
    letter-spacing: 1px;
    font-weight: 400;
    font-size:large;
    transition: color 0.3s ease;
}

.navbar-dark .navbar-nav .nav-link:hover,
.navbar-dark .navbar-nav .nav-link:focus,
.navbar-dark .navbar-nav .nav-link.active {
    color: var(--highlight-color);
}

.navbar-dark .dropdown-menu {
    background-color: var(--bg-color);
    border: none;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
}

.navbar-dark .dropdown-item {
    color: var(--secondary-color);
    padding: 10px 15px;
}

.navbar-dark .dropdown-item:hover,
.navbar-dark .dropdown-item:active {
    color: var(--highlight-color);
    background-color: var(--accent-color);
}

.navbar-dark .navbar-text {
    color: var(--text-color);
    letter-spacing: 0.5px;
    font-size: large;
}

.navbar-dark .navbar-toggler {
    border: none;
}

.navbar-dark .navbar-toggler-icon {
    background-image: url("/static/images/menu.svg");
    background-size: contain;
    background-repeat: no-repeat;
    width: 50px; /* Adjust as needed */
    height: 50px; /* Adjust as needed */
}

.navbar-dark .navbar-toggler:hover {
    background-color: var(--accent-color);
}

.navbar-dark .navbar-toggler:focus {
    box-shadow: 0 0 0 0.2rem rgba(255, 134, 149, 0.3);
}

.material-symbols--menu-book {
    display: inline-block;
    width: 96px;
    height: 96px;
    background-repeat: no-repeat;
    background-size: 100% 100%;
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23597FFC' d='M14 9.9V8.2q.825-.35 1.688-.525T17.5 7.5q.65 0 1.275.1T20 7.85v1.6q-.6-.225-1.213-.337T17.5 9q-.95 0-1.825.238T14 9.9m0 5.5v-1.7q.825-.35 1.688-.525T17.5 13q.65 0 1.275.1t1.225.25v1.6q-.6-.225-1.213-.338T17.5 14.5q-.95 0-1.825.225T14 15.4m0-2.75v-1.7q.825-.35 1.688-.525t1.812-.175q.65 0 1.275.1T20 10.6v1.6q-.6-.225-1.213-.338T17.5 11.75q-.95 0-1.825.238T14 12.65m-1 4.4q1.1-.525 2.213-.788T17.5 16q.9 0 1.763.15T21 16.6V6.7q-.825-.35-1.713-.525T17.5 6q-1.175 0-2.325.3T13 7.2zM12 20q-1.2-.95-2.6-1.475T6.5 18q-1.05 0-2.062.275T2.5 19.05q-.525.275-1.012-.025T1 18.15V6.1q0-.275.138-.525T1.55 5.2q1.175-.575 2.413-.888T6.5 4q1.45 0 2.838.375T12 5.5q1.275-.75 2.663-1.125T17.5 4q1.3 0 2.538.313t2.412.887q.275.125.413.375T23 6.1v12.05q0 .575-.487.875t-1.013.025q-.925-.5-1.937-.775T17.5 18q-1.5 0-2.9.525T12 20'/%3E%3C/svg%3E");
  }

/* General Alert Style */
.alert {
    font-family: 'Raleway', sans-serif;
    border-radius: 8px;
    margin-top: 15px;
    padding: 15px 20px;
    transition: all 0.3s ease;
    position: relative;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    background-color: var(--accent-color);
}

/* Hero */
.hero-break {
    margin: 20px auto; /* Center horizontally with equal spacing */
    width: 80%; /* Restrict width to center visually */
    border: 2px solid var(--text-color); /* Consistent styling */
}

.genres-img {
    max-height: 300px;
    max-width: 100%;
    object-fit: contain;
}

.hero-section {
    position: relative;
    z-index: 1;
}

.hero-buttons {
    position: relative;
    z-index: 2;
}


.list-group-item {
    background-color: #292a33;;
    text-decoration: none;
}

.custom-link {
    color:var(--accent-color);
    font-weight: 700;
    text-decoration: none;
}



/* Bootstrap divider */

.b-example-divider {
    width: 100%;
    height: 2rem;
    background-color: rgba(0, 0, 0, .1);
    border: solid rgba(0, 0, 0, .15);
    border-width: 1px 0;
    box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
}

/* Review Details Masthead */

.masthead {
    margin-top: 10px;
    border-radius: 30px;
    overflow: hidden;
    position: relative;
    display: inline-block;
    height: 25vh;
    width: 100%;
}

.masthead-text {
    background-color: var(--secondary-color);
    color: var(--text-color);
    position: relative;
}

.masthead h1 {
    color: var(--bg-color);
}

.masthead-image {
    position: relative;
    overflow: hidden;
}

.masthead-image:after {
    content: "";
    position: absolute;
    top: 0;
    right: 90%;
    height: 100%;
    width: 150%;
    background: var(--accent-color);
    -webkit-transform: skew(15deg);
    -moz-transform: skew(15deg);
    transform: skew(15deg);
    z-index: 100;
}

.review-content {
    color: var(--text-color);
    font-size: 1rem;
    /* Optional: Adjust font size */
    line-height: 1.6;
    /* Optional: Improve readability with better line spacing */
}

.to-be-read-banner{
    border: 2px solid var(--secondary-color);
    max-height: 70%;
    max-width:auto;
}
/* Cards */

.card {
    border: none;
    background-color: transparent;
}

.card-title {
    color: var(--secondary-color);
}

.card-text {
    color: var(--text-color);
}

.index-card {
    border: 2px solid var(--secondary-color);
    border-radius: 10px;
    margin: 20px auto;
    padding: 20px;
    background-color: #292a33;
    transition: all 0.3s ease;
    text-align: left;
}

.intro-cards p{
    font-size: large;
    text-align: left;
}
/* ... */

